--- a/webroot/stylesheets/landing/home.css
+++ b/webroot/stylesheets/landing/home.css
@@ -1,22 +1,8 @@
 
-* {
-    margin: 0;
-    padding: 0;
-    position: relative;
-    box-sizing: border-box;
-    font-family: 'helvetica';
+@media screen and (max-width: 768px) {
 
 }
 
-.center {
-    text-align: center;
-}
+@media screen and (max-width: 576px) {
 
-.title {
-    font-weight: bold;
-    padding: 20px;
-}
-
-.spacer {
-    margin-bottom: 50px;
 }
